<resources>
    <string name="app_name">在线书城</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">账号：</string>
    <string name="password">密码：</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="go_to_login">去登录</string>
    <string name="title_activity_main_home">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home">主页</string>
    <string name="mine">个人中心</string>
    <string name="exit_login">退出登录</string>
    <string name="example_market_price">市场价：</string>
    <string name="price_example">￥99</string>
    <string name="selling_price">销售价：</string>
    <string name="example_book_name">高等代数</string>
    <string name="example_selling_price">￥79</string>
    <string name="purchase_count">购买数量：</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="one">1</string>
    <string name="storage_residue">库存数量：</string>
    <string name="storage_residue_example">30</string>
    <string name="author">作者：</string>
    <string name="author_example">xxx</string>
    <string name="isbn">ISBN：</string>
    <string name="isbn_example">1234567890987</string>
    <string name="publisher">出版社：</string>
    <string name="publisher_example">机械工业出版社</string>
    <string name="publish_time">上架时间：</string>
    <string name="publish_time_example">2020-01-01 00:00:00</string>
    <string name="immediately_purchase">立刻购买</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="introduce">图文介绍</string>
    <string name="comment">查看评论</string>
    <string name="book_name">图书名称：</string>
    <string name="description">描述</string>
    <string name="description_content">描述内容</string>
    <string name="use_score">使用积分</string>
    <string name="classify">分类</string>
    <string name="book_name_shortly">书名：</string>
    <string name="price">价格：</string>
    <string name="cancel_order">取消订单</string>
    <string name="purchase">购买</string>
    <string name="order_serial">订单号：</string>
    <string name="serial_number_example">39a7e6ec-7e28-4fc4-b9fb-b5ac64</string>
    <string name="order_create_time">订单创建时间：</string>
    <string name="product_count">下单数量：</string>
    <string name="product_count_example">1本</string>
    <string name="order_status">订单状态</string>
    <string name="order_status2">订单状态：</string>
    <string name="unpaid">未支付</string>
    <string name="classify_left_example">计算机</string>
    <string name="my_info">我的信息</string>
    <string name="my_order">我的订单</string>
    <string name="exit">退出</string>
    <string name="total">总计：</string>
    <string name="order_content">订单内容：</string>
    <string name="create_time">创建时间：</string>
    <string name="purchase_count_example">2</string>
    <string name="total_example">52</string>
    <string name="order_content_example">下单了2本《高等代数 第五版 北大五版》</string>
    <string name="time">2020-01-01 00:00:00</string>
    <string name="view_details">查看详情</string>
    <string name="delete">删除</string>
    <string name="finished">已完成</string>
    <string name="send_time">发货时间：</string>
    <string name="obtain_score">可获积分：</string>
    <string name="obtain_score_example">5</string>
    <string name="payment_time">支付时间：</string>
    <string name="use_score_subtract">使用积分抵扣：</string>
    <string name="yes">是</string>
    <string name="payment_account">支付账号：</string>
    <string name="account_example">1234567890</string>
    <string name="forgot_password">忘记密码</string>
    <string name="no_comment">暂无评论</string>
    <string name="username">用户名</string>
    <string name="comment_content">评论内容</string>
    <string name="nickname_example">测试用户</string>
    <string name="receiving_address">收货地址</string>
    <string name="phone_example">17012345678</string>
    <string name="address_example">四川省xxx</string>
    <string name="edit">编辑</string>
    <string name="receiver">收货人</string>
    <string name="address_book">+ 通讯录</string>
    <string name="phone">手机号码</string>
    <string name="save">保存</string>
    <string name="detail_address">详细地址</string>
    <string name="add_address">添加地址</string>
    <string name="default_address">默认</string>
    <string name="set_default">设置默认</string>
    <string name="receiver_name">收货人姓名：</string>
    <string name="receiver_name_example">张三</string>
    <string name="contact_phone">联系电话：</string>
    <string name="sign_address">收货地址：</string>
    <string name="go_to_pay">去支付</string>
    <string name="order_expire_time">订单过期时间</string>
    <string name="edit_info">编辑资料</string>
    <string name="my_account">我的账号</string>
    <string name="my_nickname">我的昵称</string>
    <string name="sex">性别</string>
    <string name="my_phone">我的手机</string>
    <string name="my_score">我的积分</string>
    <string name="account_residue">账户余额</string>
    <string name="account_residue_example">9999</string>
    <string name="modify_password">修改密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="top_up">充值</string>
    <string name="top_up_account">充值账号</string>
    <string name="count_topped_up">充值金额</string>
    <string name="receiver2">收货人：</string>
    <string name="receiving_address2">收货地址：</string>
    <string name="phone2">手机号码：</string>
    <string name="shopping_trolley">购物车</string>
    <string name="count">数量：</string>
    <string name="collect_count_example">2</string>
    <string name="detail">查看详情</string>
    <string name="collect_time">收藏时间：</string>
    <string name="no_trolley">购物车为空！！！</string>
    <string name="no_book_message">暂无该类商品！</string>
    <string name="account2">账号：</string>
    <string name="new_password2">新密码：</string>
    <string name="sms_code">短信验证码：</string>
    <string name="confirm_password2">确认密码：</string>
    <string name="send">发送</string>
    <string name="reset_password">重置密码</string>
    <string name="phone_modified">更换号码</string>
    <string name="nickname">昵称：</string>
    <string name="sex2">性别：</string>
    <string name="verify_code">验证码：</string>
    <string name="my_birthday">我的生日：</string>
    <string name="opt">选择</string>
    <string name="search">搜索</string>
    <string name="my_shopping_trolley">我的购物车</string>
    <string name="delete_the_receive_address">删除收货地址</string>

    <string-array name="alternative_count">
        <item>6</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
</resources>