<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    app:cardElevation="50dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView19"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/order_serial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/orderItemSerial"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/serial_number_example"
            app:layout_constraintBottom_toBottomOf="@+id/textView19"
            app:layout_constraintStart_toEndOf="@+id/textView19"
            app:layout_constraintTop_toTopOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView25"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/purchase_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/orderItemProductCount"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/purchase_count_example"
            app:layout_constraintBottom_toBottomOf="@+id/textView25"
            app:layout_constraintStart_toEndOf="@+id/textView25"
            app:layout_constraintTop_toTopOf="@+id/textView25" />

        <TextView
            android:id="@+id/textView29"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView25" />

        <TextView
            android:id="@+id/orderItemTotal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/total_example"
            app:layout_constraintBottom_toBottomOf="@+id/textView29"
            app:layout_constraintStart_toEndOf="@+id/textView29"
            app:layout_constraintTop_toTopOf="@+id/textView29" />

        <TextView
            android:id="@+id/textView33"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/order_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView29" />

        <TextView
            android:id="@+id/orderItemContent"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/order_content_example"
            app:layout_constraintBottom_toBottomOf="@+id/textView33"
            app:layout_constraintStart_toEndOf="@+id/textView33"
            app:layout_constraintTop_toTopOf="@+id/textView33" />

        <TextView
            android:id="@+id/textView36"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/create_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView33" />

        <TextView
            android:id="@+id/orderItemCreateTime"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/time"
            app:layout_constraintBottom_toBottomOf="@+id/textView36"
            app:layout_constraintStart_toEndOf="@+id/textView36"
            app:layout_constraintTop_toTopOf="@+id/textView36" />

        <Button
            android:id="@+id/orderItemViewDetails"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/view_details"
            android:textSize="12sp"
            android:background="@drawable/blue_background_border"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <Button
            android:id="@+id/orderItemDelete"
            android:textSize="12sp"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:text="@string/delete"
            android:background="@drawable/red_background_border"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/orderItemViewDetails"
            app:layout_constraintStart_toEndOf="@+id/orderItemViewDetails"
            app:layout_constraintTop_toTopOf="@+id/orderItemViewDetails" />

        <TextView
            android:id="@+id/textView6"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/order_status2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <TextView
            android:id="@+id/orderItemStatus"
            android:textSize="12sp"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/finished"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />

        <TextView
            android:id="@+id/ackStatusTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:text="TextView"
            android:visibility="gone"
            android:theme="@style/labelTextView"
            android:textColor="@color/deep_gray"
            app:layout_constraintBottom_toBottomOf="@+id/orderItemStatus"
            app:layout_constraintStart_toEndOf="@+id/orderItemStatus"
            app:layout_constraintTop_toTopOf="@+id/orderItemStatus"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>