<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bottom_line"
    android:layout_marginTop="5dp"
    android:paddingBottom="5dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_brightness_1_24" />

    <TextView
        android:id="@+id/nicknameET"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/nickname_example"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="12sp"
        android:text="@string/phone_example"
        app:layout_constraintBottom_toBottomOf="@+id/nicknameET"
        app:layout_constraintStart_toEndOf="@+id/nicknameET"
        app:layout_constraintTop_toTopOf="@+id/nicknameET" />

    <TextView
        android:id="@+id/addressInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        android:text="@string/address_example"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/nicknameET" />

    <TextView
        android:id="@+id/edit"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="@+id/addressInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nicknameET" />

    <TextView
        android:id="@+id/isDefaultAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_address"
        android:textSize="8sp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/setDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/set_default"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/edit"
        app:layout_constraintEnd_toStartOf="@+id/edit"
        app:layout_constraintTop_toTopOf="@+id/edit" />

</androidx.constraintlayout.widget.ConstraintLayout>